package com.phei.netty.nio.protobuf;
option java_package = "com.phei.netty.nio.protobuf";
option java_outer_classname = "SubscribeReqProto";

message SubscibeReq {
    required int32 subReqID = 1;
    required string userName= 2;
    required string productName= 3;
    repeated string address = 4 ;

}
